crates/red_knot_python_semantic/resources/mdtest/snapshots/unresolved_import.md_-_Unresolved_import_diagnostics_-_An_unresolvable_import_that_does_not_use_`from`.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unresolved_import.md - Unresolved import diagnostics - An unresolvable import that does not use `from`
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## mdtest_snippet.py

```
1 | import does_not_exist  # error: [unresolved-import]
2 | 
3 | x = does_not_exist.foo
```

# Diagnostics

```
error: lint:unresolved-import: Cannot resolve import `does_not_exist`
 --> src/mdtest_snippet.py:1:8
  |
1 | import does_not_exist  # error: [unresolved-import]
  |        ^^^^^^^^^^^^^^
2 |
3 | x = does_not_exist.foo
  |

```
